move mute map scan to behaviour

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -6,6 +6,8 @@ CONSTANTS
 \*   Cowns = {c1, c2, c3, c4, c5}
 \*   Behaviours = {b1, b2, b3}
 INVARIANTS
-  TypeCorrect
+  TypeInvariant
 PROPERTIES
-  Correct
+  RefcountDrop
+  WillUnmute
+  Termination
