--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -1,10 +1,8 @@
 SPECIFICATION Spec
-CONSTANT defaultInitValue = defaultInitValue
 \* Add statements after this line.
 
 CONSTANTS
-\*   Cowns = {c1, c2, c3, c4, c5}
-\*   Behaviours = {b1, b2, b3}
+  null = null
 INVARIANTS
   TypeInvariant
 PROPERTIES
