--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -2,9 +2,12 @@ SPECIFICATION Spec
 \* Add statements after this line.
 
 CONSTANTS
-  null = null
 INVARIANTS
-  TypeInvariant
+  MutedInv
+  UnmutableInv
+  MuteMapInv
+  RefcountInv
+  RefcountDropInv
 PROPERTIES
-  TemporalProp
   Termination
+  WillUnmute
