--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -3,6 +3,10 @@ SPECIFICATION Spec
 
 CONSTANTS
   Null = Null
+  Normal = Normal
+  Overloaded = Overloaded
 INVARIANTS
+  SleepingCownsAreNormal
+  Completion
 PROPERTIES
   Termination
