--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -7,6 +7,7 @@ CONSTANTS
   Overloaded = Overloaded
 INVARIANTS
   SleepingCownsAreNormal
+  CownWithZeroRCIsSleeping
   Completion
 PROPERTIES
   Termination
