more initial states

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -5,9 +5,11 @@ CONSTANTS
   Null = Null
   Normal = Normal
   Overloaded = Overloaded
+  Muted = Muted
 INVARIANTS
   SleepingCownsAreNormal
   CownWithZeroRCIsSleeping
+  MutedCownNotRunning
   Completion
 PROPERTIES
   Termination
