--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -7,7 +7,7 @@ CONSTANTS
   Overloaded = Overloaded
   Muted = Muted
 INVARIANTS
-  SleepingCownsAreNormal
+  SleepingCownsArentOverloaded
   CownWithZeroRCIsSleeping
   MutedCownNotRunning
   Completion
