initial verona model

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -1,15 +1,7 @@
 SPECIFICATION Spec
-\* Add statements after this line.
 
 CONSTANTS
   Null = Null
-  Normal = Normal
-  Overloaded = Overloaded
-  Muted = Muted
 INVARIANTS
-  SleepingCownsArentOverloaded
-  CownWithZeroRCIsSleeping
-  MutedCownNotRunning
-  Completion
+  Invariants
 PROPERTIES
-  Termination
