--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -5,5 +5,6 @@ CONSTANTS
 INVARIANTS
   MessageLimit
   MutedNotScheduled
+  ProtectedNotMuted
 PROPERTIES
-  OverloadedCownsEventuallyRun
+  Termination
