--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -1,10 +1,10 @@
 SPECIFICATION Spec
 
 CONSTANTS
-  Null = Null
 INVARIANTS
   MessageLimit
   MutedNotScheduled
-  ProtectedNotMuted
+  PriorityNotMuted
 PROPERTIES
   Termination
+\*   OverloadTrigger
