use priority levels

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -3,8 +3,9 @@ SPECIFICATION Spec
 CONSTANTS
 INVARIANTS
   MessageLimit
-  MutedNotScheduled
-  PriorityNotMuted
+  RunningIsScheduled
+  LowPriorityNotRunning
+  LowPriorityMuted
 PROPERTIES
   Termination
-\*   OverloadTrigger
+  OverloadRaisesPriority
