--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -4,8 +4,10 @@ CONSTANTS
 INVARIANTS
   MessageLimit
   RunningIsScheduled
-  LowPriorityNotRunning
+  LowPriorityNotScheduled
   LowPriorityMuted
+  BehaviourAcquisition
+  Prioritization
 PROPERTIES
   Termination
   OverloadRaisesPriority
