--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -7,6 +7,7 @@ INVARIANTS
   LowPriorityNotScheduled
   LowPriorityMuted
   BehaviourAcquisition
+  Nonblocking
 PROPERTIES
   Termination
   OverloadRaisesPriority
