--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -8,6 +8,7 @@ INVARIANTS
   LowPriorityMuted
   BehaviourAcquisition
   Nonblocking
+  WillScheduleCown
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
