require ~running[cown] for Prerun

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -9,6 +9,7 @@ INVARIANTS
   BehaviourAcquisition
   Nonblocking
   WillScheduleCown
+\*   Foo
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
