--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -9,7 +9,7 @@ INVARIANTS
   BehaviourAcquisition
   Nonblocking
   WillScheduleCown
-\*   Foo
+  RunningNotBlocked
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
