--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -4,6 +4,7 @@ CONSTANTS
 INVARIANTS
   MessageLimit
   RunningIsScheduled
+  CownNotMutedBySelf
   LowPriorityNotScheduled
   LowPriorityMuted
   BehaviourAcquisition
