--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -7,10 +7,10 @@ INVARIANTS
   CownNotMutedBySelf
   LowPriorityNotScheduled
   LowPriorityMuted
-  BehaviourAcquisition
   Nonblocking
   WillScheduleCown
   RunningNotBlocked
+  UnscheduledByMuteOrAcquire
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
