redefine BehaviourAcquisition invariant

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -11,6 +11,7 @@ INVARIANTS
   WillScheduleCown
   RunningNotBlocked
   UnscheduledByMuteOrAcquire
+  BehaviourAcquisition
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
