--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -12,6 +12,7 @@ INVARIANTS
   RunningNotBlocked
   UnscheduledByMuteOrAcquire
   BehaviourAcquisition
+  SelfInCurrentMessage
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
