--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -11,6 +11,7 @@ INVARIANTS
   RunningNotBlocked
   UnscheduledByMuteOrAcquire
   BehaviourAcquisition
+  AcquiredOnce
   SelfInCurrentMessage
 PROPERTIES
   Termination
