normal priority on sleep

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -13,6 +13,9 @@ INVARIANTS
   BehaviourAcquisition
   AcquiredOnce
   SelfInCurrentMessage
+  HighPriorityScheduledOrAcquired
+  HighPriorityInQueue
+  SleepingIsNormalOrRequired
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
