add MuteSetsDisjoint, remove HighPriorityScheduledOrAcquired

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -13,9 +13,9 @@ INVARIANTS
   BehaviourAcquisition
   AcquiredOnce
   SelfInCurrentMessage
-  HighPriorityScheduledOrAcquired
   HighPriorityInQueue
   SleepingIsNormalOrRequired
+  MuteSetsDisjoint
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
