--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -16,6 +16,7 @@ INVARIANTS
   HighPriorityInQueue
   SleepingIsNormalOrRequired
   MuteSetsDisjoint
+  AcyclicTCMute
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
