incrementally check priority on acquire

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -7,7 +7,7 @@ INVARIANTS
   CownNotMutedBySelf
   LowPriorityMuted
   Nonblocking
-  WillScheduleCown
+\*   WillScheduleCown
   RunningNotBlocked
   UnscheduledByMuteOrAcquire
   BehaviourAcquisition
@@ -16,7 +16,8 @@ INVARIANTS
   HighPriorityInQueue
   SleepingIsNormalOrRequired
   MuteSetsDisjoint
-  AcyclicTCMute
+\*   AcyclicTCMute
+  FreeCandy
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
