--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -7,7 +7,7 @@ INVARIANTS
   CownNotMutedBySelf
   LowPriorityMuted
   Nonblocking
-\*   WillScheduleCown
+  \* WillScheduleCown
   RunningNotBlocked
   UnscheduledByMuteOrAcquire
   BehaviourAcquisition
@@ -16,8 +16,8 @@ INVARIANTS
   HighPriorityInQueue
   SleepingIsNormalOrRequired
   MuteSetsDisjoint
-\*   AcyclicTCMute
-  FreeCandy
+  \* AcyclicTCMute
+  HighPriorityHasWork
 PROPERTIES
   Termination
   SomeCownWillBeScheduled
