add comments to properties and invariants

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -1,23 +1,21 @@
 SPECIFICATION Spec
 
 CONSTANTS
+PROPERTIES
+  Termination
 INVARIANTS
   MessageLimit
   RunningIsScheduled
   CownNotMutedBySelf
   LowPriorityMuted
   Nonblocking
-  \* WillScheduleCown
   RunningNotBlocked
   UnscheduledByMuteOrAcquire
   BehaviourAcquisition
   AcquiredOnce
   SelfInCurrentMessage
-  HighPriorityInQueue
-  SleepingIsNormalOrRequired
-  MuteSetsDisjoint
-  \* AcyclicTCMute
+  HighPriorityInUnblockedQueue
+  SleepingIsNormal
   HighPriorityHasWork
-PROPERTIES
-  Termination
-  SomeCownWillBeScheduled
+  MuteSetsDisjoint
+  AcyclicTCMute
