--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -13,7 +13,7 @@ INVARIANTS
   UnscheduledByMuteOrAcquire
   BehaviourAcquisition
   AcquiredOnce
-  SelfInCurrentMessage
+  SelfInQueueMessages
   HighPriorityInUnblockedQueue
   SleepingIsNormal
   HighPriorityHasWork
