removing if else

--- a/backpressure.cfg
+++ b/backpressure.cfg
@@ -1,8 +1,6 @@
 SPECIFICATION Spec
 
 CONSTANTS
-PROPERTIES
-  Termination
 INVARIANTS
   MessageLimit
   RunningIsScheduled
@@ -18,4 +16,4 @@ INVARIANTS
   SleepingIsNormal
   HighPriorityHasWork
   MuteSetsDisjoint
-  AcyclicTCMute
+  MutedByIsAcyclic
